dev/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: goclone-dev
spec:
  selector:
    app: redis
  ports:
    - name: tcp-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
