dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goclone-svc
  namespace: goclone-dev
spec:
  selector:
    app: goclone
  ports:
    - name: http-goclone
      protocol: TCP
      port: 8080
      targetPort: 8080
