dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: goclone-gateway
  namespace: goclone-dev
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "goclone-dev.sdc.cpp"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "goclone-dev.sdc.cpp"
    tls:
      mode: SIMPLE
      credentialName: wildcard-tls
